force-app/main/default/objects/Media_Permissions__c/Media_Permissions__c.object-meta.xml
<CustomObject>
    <description>Tracks media permissions for an individual.</description>
    <label>Media Permissions</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Media Permissions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>