force-app/main/default/objects/Media_Permissions__c/fields/Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Case_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Case Study for Permission</description>
    <label>Case Study</label>
    <referenceTo>Case_Study__c</referenceTo>
    <relationshipLabel>Media Permissions</relationshipLabel>
    <relationshipName>Media_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>