force-app/main/default/objects/Media_Permissions__c/fields/Family_Media_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Family_Media_Permissions__c</fullName>
    <label>Account Name</label>
    <referenceTo>Family_Media_Permissions__c</referenceTo>
    <relationshipLabel>Media Permissions</relationshipLabel>
    <relationshipName>F_Media_Permissions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>