force-app/main/default/objects/Media_Permissions__c/fields/Media_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Media_Permissions__c</fullName>
    <label>Media Permissions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opted-in to share images and media with camp participants</fullName>
            </value>
            <value>
                <fullName>Opted-in to share images and media with the public</fullName>
            </value>
            <value>
                <fullName>Opted-in to share images and media with corporate partners to use to promote Camp Quality and promote our partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>