force-app/main/default/objects/Media_Permissions__c/fields/Opted_in__c.field-meta.xml
<CustomField>
    <fullName>Opted_in__c</fullName>
    <description>Shows whether the individual has opted in to share images or media with the wider public eg. website or social media</description>
    <inlineHelpText>Shows whether the individual has opted in to share images or media with the wider public eg. website or social media</inlineHelpText>
    <label>Opted-in to share with the wider public</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>