force-app/main/default/objects/Media_Permissions__c/fields/Opted_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Opted_In_Date__c</fullName>
    <formula>$System.OriginDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opted In Date</label>
    <type>Date</type>
</CustomField>