force-app/main/default/objects/Media_Permissions__c/fields/Opted_in_to_share_with__c.field-meta.xml
<CustomField>
    <fullName>Opted_in_to_share_with__c</fullName>
    <description>Shows whether the individual has opted in to share images or media with people they attended camp with.</description>
    <inlineHelpText>Shows whether the individual has opted in to share images or media with people they attended camp with.</inlineHelpText>
    <label>Opted-in to share with camp participants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>