force-app/main/default/objects/Media_Permissions__c/fields/Opted_in_to_share_with_Corporates__c.field-meta.xml
<CustomField>
    <fullName>Opted_in_to_share_with_Corporates__c</fullName>
    <description>Shows whether an individual has opted in for corporate partners to share media or images of them.</description>
    <inlineHelpText>Shows whether an individual has opted in for corporate partners to share media or images of them.</inlineHelpText>
    <label>Opted-in to share with Corporates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>