force-app/main/default/objects/Media_Permissions__c/fields/Opted_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_Date__c</fullName>
    <label>Opted Out Date</label>
    <type>Date</type>
</CustomField>