force-app/main/default/objects/Media_Permissions__c/recordTypes/Case_Study_Consent.recordType-meta.xml
<RecordType>
    <fullName>Case_Study_Consent</fullName>
    <active>true</active>
    <description>Tracks consent for Case Studies</description>
    <label>Case Study Consent</label>
</RecordType>