force-app/main/default/objects/Media_Permissions__c/recordTypes/Image_Permissions.recordType-meta.xml
<RecordType>
    <fullName>Image_Permissions</fullName>
    <active>true</active>
    <description>Tracks image permissions for marketing purposes</description>
    <label>Image Permissions</label>
</RecordType>